square icon mask test

--- a/icon/openToCheckPng.html
+++ b/icon/openToCheckPng.html
@@ -6,11 +6,11 @@
 </head>
 
 <body style="font-family:'Arial';">
-  <div style="background: black;"> <img src='payCheckIconMain512x512.png' style="width: 180px;"></div>
+  <div style="background: black;"> <img src='payCheckIconMain512x512_sqr.png' style="width: 180px;"></div>
   <br>
-  <div style="background: #008100;"> <img src='payCheckIconMain512x512.png' style="width: 180px;"></div>
+  <div style="background: #008100;"> <img src='payCheckIconMain512x512_sqr.png' style="width: 180px;"></div>
   <br>  
-  <div style="background: white;"> <img src='payCheckIconMain512x512.png' style="width: 180px;"></div>
+  <div style="background: white;"> <img src='payCheckIconMain512x512_sqr.png' style="width: 180px;"></div>
   <br>  
 </body>
 </html>
